# k1s0

./: .claudeignore  .dockerignore  .editorconfig  .env.dev  .env.dev.example  .env.example  .gitattributes  .gitguardian.yaml  .gitignore  .gitleaks.toml  .golangci.yaml  .hadolint.yaml  .markdownlint-cli2.jsonc  .mcp.json  .pre-commit-config.yaml  .spectral.yaml  .tool-versions  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  analysis_options.yaml  buf.gen.docs.yaml  buf.gen.internal.yaml  buf.gen.openapi.yaml  buf.gen.yaml  commitlint.config.js  deny.toml  docker-compose.dev.yaml  docker-compose.override.yaml.example  docker-compose.yaml  eslint.config.mjs  go.work  go.work.sum  justfile  k1s0.yaml  (+6 more)
CLI/: Cargo.toml  README.md
CLI/crates/: README.md
CLI/crates/k1s0-cli/: Cargo.toml  README.md
CLI/crates/k1s0-cli/src/: error.rs  lib.rs  main.rs  output.rs  settings.rs
CLI/crates/k1s0-cli/tests/: alertmanager_template_rendering.rs  bff_template_rendering.rs  cicd_template_rendering.rs  cli_integration_tests.rs  client_template_rendering.rs  consul_template_rendering.rs  database_template_rendering.rs  devcontainer_template_rendering.rs  docker_compose_template_rendering.rs  (+21 more)
CLI/crates/k1s0-core/: Cargo.toml
CLI/crates/k1s0-generator/: Cargo.toml  README.md
CLI/crates/k1s0-gui/: Cargo.toml  build.rs  tauri.conf.json
CLI/crates/k1s0-lsp/: Cargo.toml
CLI/schemas/: README.md  manifest.example.json  manifest.schema.json
CLI/src/: cli.rs  main.rs
CLI/src/application/: configure_workspace.rs  create_project.rs  e2e_runner.rs  interactive.rs  mod.rs  new_project.rs  port.rs  show_workspace.rs
CLI/src/commands/: build.rs  deploy.rs  generate.rs  init.rs  test_cmd.rs
CLI/src/config/: mod.rs
CLI/src/domain/: error.rs  mod.rs  model.rs  region.rs  validation.rs  workspace.rs
CLI/src/infrastructure/: business_region_repository.rs  config_file.rs  generator.rs  mod.rs  prompt.rs  scripted_prompt.rs  sparse_checkout.rs  stdin_prompt.rs  ui.rs
CLI/src/prompt/: mod.rs
CLI/src/template/: context.rs  mod.rs
CLI/templates/: README.md
CLI/templates/backend-csharp/: README.md
CLI/templates/backend-go/: README.md
CLI/templates/backend-kotlin/: README.md
CLI/templates/backend-python/: README.md
CLI/templates/backend-rust/: README.md
CLI/templates/cicd/: ci.yaml.tera
CLI/templates/frontend-android/: README.md
CLI/templates/frontend-flutter/: README.md
CLI/templates/frontend-react/: README.md
CLI/templates/helm/: Chart.yaml.tera  values-dev.yaml.tera  values.yaml.tera
CLI/templates/init/: .hadolint.yaml  compose.yaml
CLI/templates/service-mesh/: peer-authentication.yaml.tera
CLI/templates/terraform/: main.tf.tera  outputs.tf.tera  terraform.tfvars.tera
CLI/tests/: cicd_template_rendering.rs  client_template_rendering.rs  config_persistence_test.rs  database_template_rendering.rs  docker_compose_template_rendering.rs  helm_template_rendering.rs  integration.rs  library_template_rendering.rs  server_template_rendering.rs  snapshot_tests.rs
CLI/tests/e2e/: create_project.rs  main.rs  workspace.rs
CLI/tests/integration/: new_backend_test.rs  new_frontend_test.rs
CLI/tests/snapshots/: snapshot_tests__bff_go.snap  snapshot_tests__bff_rust.snap  snapshot_tests__client_flutter.snap  snapshot_tests__go_graphql_minimal.snap  snapshot_tests__go_rest_grpc_postgresql.snap  snapshot_tests__helm_rest_postgresql.snap  snapshot_tests__library_go.snap  snapshot_tests__rust_graphql_minimal.snap  snapshot_tests__rust_rest_db_only.snap  snapshot_tests__rust_rest_grpc_minimal.snap  snapshot_tests__service_mesh_system_grpc.snap
e2e/: =6.0  conftest.py  pyproject.toml  pytest.ini  requirements.txt  test_create_project.py  test_main_menu.py  test_settings.py
e2e/scenarios/: create_project.yaml
e2e/tests/docs_compliance/: test_api_design.py  test_api_gateway.py  test_api_schema_spec.py  test_auth.py  test_cicd.py  test_cli_flow.py  test_codegen_pipeline.py  test_coding_standards.py  test_concept.py  test_config_design.py  test_config_templates.py  test_devcontainer.py  test_directory_structure.py  test_docker_compose.py  test_docker_images.py  test_helm.py  test_infra_configs.py  test_kong_templates.py  test_kubernetes.py  test_library_chart.py  test_messaging.py  test_observability.py  test_proto.py  test_rendering_spec.py  test_service_mesh.py  test_template_cicd.py  test_template_content_bff.py  test_template_content_client.py  test_template_content_database.py  test_template_content_library.py  test_template_content_server.py  test_template_files.py  test_template_helm.py  test_template_pipeline.py  test_terraform.py
e2e/tests/health/: test_health.py
e2e/tests/system_api/: conftest.py  test_auth_audit.py  test_auth_health.py  test_auth_integration.py  test_auth_token.py  test_auth_users.py  test_config_crud.py  test_config_health.py  test_cross_service.py  test_dlq_health.py  test_dlq_operations.py  test_dlq_recovery.py  test_featureflag_health.py  test_graphql_gateway_health.py  test_grpc_auth.py  test_grpc_config.py  test_grpc_saga.py  test_kafka_messaging.py  test_kong_routing.py  test_notification_health.py  test_observability.py  test_policy_health.py  test_ratelimit_health.py  test_saga_compensation.py  test_saga_health.py  test_saga_operations.py  test_scheduler_health.py  test_search_health.py  test_tenant_health.py  test_vault_health.py
examples/tier1-rust-service/: Cargo.toml  README.md
examples/tier1-rust-service/src/: lib.rs  main.rs
framework/backend/python/: README.md  pyproject.toml
framework/backend/rust/: Cargo.toml  README.md
regions/business/: Cargo.toml
regions/service/: Cargo.toml
regions/system/: .dockerignore  Cargo.toml  deny.toml
regions/system/proto/: buf.gen.yaml  buf.yaml
setup/gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/platform/scaffold/: .gitignore  Cargo.toml  README.md
src/sdk/rust/: Cargo.toml
src/tier1/rust/: .gitignore  Cargo.toml  Dockerfile.audit  Dockerfile.decision  Dockerfile.pii
tests/fuzz/rust/: Cargo.toml
(+10037 files in other folders)
