[workspace]
members = [
    "crates/k1s0-core",
    "crates/k1s0-cli",
    "crates/k1s0-gui",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
# プロダクションコードでの unwrap() 使用を警告する
# TODO: warn → deny に段階的に昇格し、unwrap() を expect() / ? 演算子に置換する
unwrap_used = "warn"
