[workspace]
members = [
    "crates/k1s0-core",
    "crates/k1s0-cli",
    "crates/k1s0-gui",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
# プロダクションコードでの unwrap() 使用を禁止する（L-1）
# テストコード内では #[allow(clippy::unwrap_used)] で個別に許可する
unwrap_used = "deny"
