# Business 層のワークスペース定義
# taskmanagement 配下の Rust サーバーを一元管理する
[workspace]
resolver = "2"
members = [
    # タスク管理ドメインの Rust サーバー
    "taskmanagement/server/rust/project-master",
]

# ワークスペース共通の Rust バージョン指定
[workspace.package]
rust-version = "1.93"

# ワークスペース共通リント: プロダクションコードでの unwrap() 使用と async コンテキストでの std::sync::Mutex 保持を禁止する
[workspace.lints.clippy]
unwrap_used = "deny"
# async fn 内で std::sync::Mutex のロックを await ポイントをまたいで保持することを禁止する
await_holding_lock = "deny"
# HIGH-ARCH 監査対応: pedantic lint を有効化してコード品質を段階的に向上させる
# deny ではなく warn にすることで既存コードへの影響を最小化する
pedantic = { level = "warn", priority = -1 }
# pedantic lint のうち過度に厳格なルールは個別に許可する
needless_pass_by_value = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

# ワークスペース共通依存関係: 全メンバークレートで統一バージョンを使用する
[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# データベースパスワード等の機密情報をメモリ上で保護するクレート。Debug トレイトで [REDACTED] 表示される。
secrecy = { version = "0.8", features = ["serde"] }
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
mockall = "0.14"
tokio-test = "0.4"
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-otlp = "0.27"
tracing-opentelemetry = "0.28"
prometheus = "0.14"
validator = { version = "0.20", features = ["derive"] }
rdkafka = { version = "0.39", features = ["cmake-build"] }

# リリースビルドの最適化設定
[profile.dev]
debug = 1

[profile.release]
lto = "thin"
strip = true
opt-level = 3
