[workspace]
resolver = "2"
members = [
    # Servers (27)
    "server/rust/api-registry",
    "server/rust/app-registry",
    "server/rust/auth",
    "server/rust/config",
    "server/rust/dlq-manager",
    "server/rust/event-monitor",
    "server/rust/master-maintenance",
    "server/rust/event-store",
    "server/rust/featureflag",
    "server/rust/file",
    "server/rust/graphql-gateway",
    "server/rust/navigation",
    "server/rust/notification",
    "server/rust/policy",
    "server/rust/rule-engine",
    "server/rust/quota",
    "server/rust/ratelimit",
    "server/rust/saga",
    "server/rust/scheduler",
    "server/rust/search",
    "server/rust/service-catalog",
    "server/rust/session",
    "server/rust/tenant",
    "server/rust/vault",
    "server/rust/workflow",
    "server/rust/ai-gateway",
    "server/rust/ai-agent",
    # Libraries (39)
    "library/rust/audit-client",
    "library/rust/auth",
    "library/rust/bulkhead",
    "library/rust/cache",
    "library/rust/circuit-breaker",
    "library/rust/codegen",
    "library/rust/config",
    "library/rust/correlation",
    "library/rust/distributed-lock",
    "library/rust/dlq-client",
    "library/rust/encryption",
    "library/rust/event-bus",
    "library/rust/eventstore",
    "library/rust/featureflag",
    "library/rust/file-client",
    "library/rust/graphql-client",
    "library/rust/health",
    "library/rust/server-common",
    "library/rust/idempotency",
    "library/rust/kafka",
    "library/rust/messaging",
    "library/rust/migration",
    "library/rust/notification-client",
    "library/rust/outbox",
    "library/rust/pagination",
    "library/rust/quota-client",
    "library/rust/ratelimit-client",
    "library/rust/resiliency",
    "library/rust/retry",
    "library/rust/saga",
    "library/rust/scheduler-client",
    "library/rust/schemaregistry",
    "library/rust/search-client",
    "library/rust/serviceauth",
    "library/rust/session-client",
    "library/rust/app-updater",
    "library/rust/telemetry",
    "library/rust/telemetry-macros",
    "library/rust/tenant-client",
    "library/rust/test-helper",
    "library/rust/tracing",
    "library/rust/validation",
    "library/rust/vault-client",
    "library/rust/webhook-client",
    "library/rust/websocket",
    # Building Blocks (6)
    "library/rust/bb-core",
    "library/rust/building-blocks",
    "library/rust/bb-pubsub",
    "library/rust/bb-statestore",
    "library/rust/bb-secretstore",
    "library/rust/bb-binding",
    "library/rust/bb-ai-client",
]

[workspace.package]
rust-version = "1.93"

# ワークスペース共通依存: バージョンとfeatureを一元管理する
[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
mockall = "0.13"
tokio-test = "0.4"

# ワークスペース共通リント: プロダクションコードでの unwrap() 使用を禁止する
[workspace.lints.clippy]
unwrap_used = "deny"

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
strip = true
opt-level = 3
