[workspace]
resolver = "2"
members = [
    # Servers (27)
    "server/rust/api-registry",
    "server/rust/app-registry",
    "server/rust/auth",
    "server/rust/config",
    "server/rust/dlq-manager",
    "server/rust/event-monitor",
    "server/rust/master-maintenance",
    "server/rust/event-store",
    "server/rust/featureflag",
    "server/rust/file",
    "server/rust/graphql-gateway",
    "server/rust/navigation",
    "server/rust/notification",
    "server/rust/policy",
    "server/rust/rule-engine",
    "server/rust/quota",
    "server/rust/ratelimit",
    "server/rust/saga",
    "server/rust/scheduler",
    "server/rust/search",
    "server/rust/service-catalog",
    "server/rust/session",
    "server/rust/tenant",
    "server/rust/vault",
    "server/rust/workflow",
    "server/rust/ai-gateway",
    "server/rust/ai-agent",
    # Libraries (46)
    "library/rust/audit-client",
    "library/rust/auth",
    "library/rust/bulkhead",
    "library/rust/cache",
    "library/rust/circuit-breaker",
    "library/rust/codegen",
    "library/rust/config",
    "library/rust/correlation",
    "library/rust/distributed-lock",
    "library/rust/dlq-client",
    "library/rust/encryption",
    "library/rust/event-bus",
    "library/rust/eventstore",
    "library/rust/featureflag",
    "library/rust/file-client",
    "library/rust/graphql-client",
    "library/rust/health",
    "library/rust/server-common",
    "library/rust/idempotency",
    "library/rust/kafka",
    "library/rust/messaging",
    "library/rust/migration",
    "library/rust/notification-client",
    "library/rust/outbox",
    "library/rust/pagination",
    "library/rust/proto-build",
    "library/rust/quota-client",
    "library/rust/ratelimit-client",
    "library/rust/resiliency",
    "library/rust/retry",
    "library/rust/saga",
    "library/rust/scheduler-client",
    "library/rust/schemaregistry",
    "library/rust/search-client",
    "library/rust/serviceauth",
    "library/rust/session-client",
    "library/rust/app-updater",
    "library/rust/telemetry",
    "library/rust/telemetry-macros",
    "library/rust/tenant-client",
    "library/rust/test-helper",
    "library/rust/tracing",
    "library/rust/validation",
    "library/rust/vault-client",
    "library/rust/webhook-client",
    "library/rust/websocket",
    # Building Blocks (7) — ADR-0018 で非推奨・k1s0-messaging への移行決定済み（M-4 監査対応）
    # ai-agent サービスが bb-ai-client に依存しているため、ai-agent 移行完了まで削除できない。
    # 移行完了後に全7クレートをワークスペースから除外・ディレクトリを削除すること。
    "library/rust/bb-core",
    "library/rust/building-blocks",
    "library/rust/bb-pubsub",
    "library/rust/bb-statestore",
    "library/rust/bb-secretstore",
    "library/rust/bb-binding",
    "library/rust/bb-ai-client",
]

[workspace.package]
rust-version = "1.93"

# ワークスペース共通依存: バージョンとfeatureを一元管理する
[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "limit", "retry", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# データベースパスワード等の機密情報をメモリ上で保護するクレート。Debug トレイトで [REDACTED] 表示される。
secrecy = { version = "0.8", features = ["serde"] }
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tonic = "0.12"
# tonic-health 0.12 は gRPC Health Check Protocol (grpc.health.v1.Health) を実装する。
# tonic 0.12 に対応したバージョンを使用する。
tonic-health = "0.12"
# tonic-build 0.12 は内部で prost-build 0.13 を使用し、prost 0.13 互換のコードを生成する。
# tonic 0.12 は prost 0.13 に依存しているため、prost = "0.13" が正しい組み合わせ。
# tonic-build 0.14 は prost ベースの configure()/compile_protos() API を持たないため使用不可。
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
mockall = "0.14"
tokio-test = "0.4"
# テストコンテナ: バージョン競合防止のため workspace で一元管理する（H-2 監査対応）
# L-12 監査対応: testcontainers-modules 0.11.x は testcontainers ^0.23 を要求するため、
# testcontainers 0.24 と共存すると型不整合が発生しテストがコンパイルできない。
# testcontainers-modules 0.12.x 以降は testcontainers ^0.24 を要求するためバージョンを統一する。
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres"] }
# インメモリキャッシュ: 複数サービスで同一バージョン・feature を使用するため workspace で一元管理する（L-04 監査対応）
moka = { version = "0.12", features = ["future"] }
# ハッシュアルゴリズム: 複数サービスで同一バージョンを使用するため workspace で一元管理する（L-04 監査対応）
sha2 = "0.10"
# 16進数エンコード/デコード: 複数サービスで同一バージョンを使用するため workspace で一元管理する（L-04 監査対応）
hex = "0.4"
# Redis クライアント: 複数サービスで同一バージョンを使用するため workspace で一元管理する（L-04 監査対応）
# script feature を必要とするサービス（distributed-lock 等）は個別に上書きすること
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
# URL パース・検証: SSRF 対策で webhook URL のスキーム・ホスト・IP 範囲を検証するために使用する
url = "2"
# 正規表現エンジン: 複数サービスで同一バージョンを使用するため workspace で一元管理する（RUST-MED-003 対応）
regex = "1"
# LRU キャッシュ: 正規表現コンパイル結果のキャッシュに使用する（RUST-HIGH-003 対応）
lru = "0.16"
# 安全な一時ファイル作成: アトミックな作成と Drop 時の自動削除で TOCTOU 脆弱性を防止する（RUST-CRIT-001 対応）
tempfile = "3"

# ワークスペース共通リント: プロダクションコードでの unwrap() 使用と async コンテキストでの std::sync::Mutex 保持を禁止する
[workspace.lints.clippy]
unwrap_used = "deny"
# async fn 内で std::sync::Mutex のロックを await ポイントをまたいで保持することを禁止する
await_holding_lock = "deny"

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
strip = true
opt-level = 3
