[package]
name = "k1s0-core"
version = "0.1.0"
edition = "2021"
description = "k1s0 shared core library"

[dependencies]
# secrecy クレートでパスワード等の機密情報を Secret<T> でラップし、Debug 出力への漏洩を防ぐ（H-20 監査対応）
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
regex = "1"
heck = "0.5"
tera = "1"
walkdir = "2"
ureq = { version = "3", features = ["json"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.18"
similar = "2"
# L-14 監査対応: tempfile は本番コード（template_migrate/planner.rs の RenderedTemplateTree 構造体）で
# 一時ディレクトリを保持するために使用しているため [dependencies] に配置している（[dev-dependencies] 不可）。
# テスト専用の用途には各ファイル内で #[cfg(test)] use tempfile::... として参照している。
tempfile = "3"

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1"
insta = { version = "1", features = ["yaml"] }
mockito = "1"
