[package]
name = "k1s0-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "k1s0 テンプレート展開・差分適用ライブラリ"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
glob.workspace = true
sha2.workspace = true
tera.workspace = true
chrono.workspace = true
dirs.workspace = true
jsonschema.workspace = true
semver.workspace = true
petgraph.workspace = true

# Watch mode (optional)
notify = { workspace = true, optional = true }
notify-debouncer-mini = { workspace = true, optional = true }

# AST parsing (optional)
tree-sitter = { workspace = true, optional = true }
streaming-iterator = { version = "0.1", optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-kotlin-ng = { workspace = true, optional = true }

[features]
default = ["ast"]
watch = ["notify", "notify-debouncer-mini"]
ast = [
    "tree-sitter",
    "streaming-iterator",
    "tree-sitter-rust",
    "tree-sitter-go",
    "tree-sitter-typescript",
    "tree-sitter-python",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin-ng",
]

[dev-dependencies]
tempfile = "3.10"
