[package]
name = "k1s0-gui"
version = "0.1.0"
edition = "2021"
description = "k1s0 Tauri v2 GUI application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
k1s0-core = { path = "../k1s0-core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
