[package]
name = "k1s0-gui"
version = "0.1.0"
edition = "2021"
description = "k1s0 Tauri v2 GUI application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
k1s0-core = { path = "../k1s0-core" }
tauri = { version = "2", features = [] }
# MEDIUM-009 監査対応: localStorage に代わる安全なストレージとして Tauri Store プラグインを使用する。
# OS アプリデータディレクトリに JSON ファイルとして保存されるため、WebView スクリプトから直接アクセス不可能になる。
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
keyring = "3"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
