[package]
name = "k1s0-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "k1s0 Language Server Protocol 実装"

[[bin]]
name = "k1s0-lsp"
path = "src/main.rs"

[dependencies]
# k1s0
k1s0-generator.workspace = true

# CLI
clap.workspace = true

# LSP
tower-lsp = "0.20"
tokio = { workspace = true, features = ["full"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.10"
