# cargo-fuzz の crate（k1s0 fuzz/rust、独立 workspace）。
#
# fuzz target:
#   - proto_fuzz: tier1 internal proto の decode を fuzz して decoder panic / OOM を検出
#   - crypto_fuzz: SHA-256 ハッシュチェーン構築の入力値域を fuzz（NFR-H-INT-001 補強）

[package]
name = "k1s0-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# tier1 internal proto stub（k1s0::internal::audit::v1 等）。
k1s0-tier1-proto-gen = { path = "../../../src/tier1/rust/crates/proto-gen" }
# proto decode に必要なランタイム。
prost = "0.13"
# crypto_fuzz で SHA-256 を回すため。
sha2 = "0.10"

[[bin]]
name = "proto_fuzz"
path = "fuzz_targets/proto_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "crypto_fuzz"
path = "fuzz_targets/crypto_fuzz.rs"
test = false
doc = false
bench = false
